tests/testthat/prod/fail/geo/MarineRegions/wms.R
structure(list(url = "geo/MarineRegions/wms?", status_code = 500L, headers = structure(list(
    `access-control-allow-origin` = "*", `x-frame-options` = "SAMEORIGIN",
    `content-encoding` = "gzip", `content-type` = "text/xml;charset=UTF-8",
    `transfer-encoding` = "chunked", date = "Wed, 08 Mar 2023 13:56:46 GMT"), class = c("insensitive",
"list")), all_headers = list(list(status = 200L, version = "HTTP/1.1",
    headers = structure(list(`access-control-allow-origin` = "*",
        `x-frame-options` = "SAMEORIGIN", `content-encoding` = "gzip",
        `content-type` = "text/xml;charset=UTF-8", `transfer-encoding` = "chunked",
        date = "Wed, 08 Mar 2023 13:56:46 GMT"), class = c("insensitive",
    "list")))), cookies = structure(list(domain = logical(0),
    flag = logical(0), path = logical(0), secure = logical(0),
    expiration = structure(numeric(0), class = c("POSIXct", "POSIXt"
    )), name = logical(0), value = logical(0)), row.names = integer(0), class = "data.frame"),
    content = charToRaw(""),
    date = structure(1678283806, class = c("POSIXct", "POSIXt"
    ), tzone = "GMT"), times = c(redirect = 0, namelookup = 0.000101,
    connect = 0.000103, pretransfer = 0.000231, starttransfer = 0.003547,
    total = 0.003728)), class = "response")
